--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "qrcode": "^1.5.4",
         "qrcode-reader": "^1.0.4",
         "rahad-all-downloader": "^2.1.10",
+        "rakib-media-downloader": "^1.0.2",
         "request": "latest",
         "requests": "^0.3.0",
         "semver": "latest",
