--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
         "gradient-string": "^2.0.2",
         "https-proxy-agent": "latest",
         "image-downloader": "^4.3.0",
+        "imgur-upload-api": "^2.0.2",
         "jimp": "^0.22.8",
         "lyrics-finder": "^21.7.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.41",
         "mqtt": "latest",
-        "rahad-all-downloader": "2.1.17",
+        "nayan-media-downloader": "^2.5.4",
+        "nayan-server": "^2.4.2",
         "node-cron": "^3.0.2",
         "node-fetch": "^3.3.1",
         "node-superfetch": "^0.3.3",
@@ -55,7 +57,7 @@
         "prompt-sync": "^4.2.0",
         "qrcode": "^1.5.4",
         "qrcode-reader": "^1.0.4",
-        "rahad-all-downloader": "^2.1.17",
+        "rahad-all-downloader": "^2.1.10",
         "request": "latest",
         "requests": "^0.3.0",
         "semver": "latest",
