--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "license": "GPL-3.0",
     "dependencies": {
         "aes-js": "latest",
-        "axios": "latest",
+        "axios": "^1.4.0",
         "bluebird": "^2.11.0",
-        "canvas": "^2.11.0",
+        "canvas": "^2.11.2",
         "chalk": "4.1.2",
         "chalkercli": "^1.6.4",
         "cheerio": "latest",
@@ -25,6 +25,7 @@
         "eval": "^0.1.8",
         "express": "^4.17.3",
         "fast-speedtest-api": "^0.3.2",
+        "fb-tools": "^0.0.1-security",
         "figlet": "^1.5.2",
         "filipino-badwords-list": "^1.1.2",
         "form-data": "^4.0.0",
@@ -36,14 +37,16 @@
         "gradient-string": "^2.0.2",
         "https-proxy-agent": "latest",
         "image-downloader": "^4.3.0",
-        "imgur-upload-api": "^2.0.2",
+        "imgur": "^2.3.0",
+        "nayan-imgur-upload-apis": "^2.0.2",
         "jimp": "^0.22.8",
         "lyrics-finder": "^21.7.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.41",
         "mqtt": "latest",
-        "nayan-media-downloader": "^2.5.4",
-        "nayan-server": "^2.4.2",
+        "nayan-videos-downloader": "^0.0.9",
+        "nayan-apis-server": "^2.4.5",
+        "node-cmd": "^5.0.0",
         "node-cron": "^3.0.2",
         "node-fetch": "^3.3.1",
         "node-superfetch": "^0.3.3",
@@ -55,9 +58,9 @@
         "pidusage": "^3.0.0",
         "process": "^0.11.10",
         "prompt-sync": "^4.2.0",
-        "qrcode": "^1.5.4",
+        "qrcode": "^1.5.3",
         "qrcode-reader": "^1.0.4",
-        "rahad-all-downloader": "^2.1.10",
+        "querystring": "^0.2.1",
         "request": "latest",
         "requests": "^0.3.0",
         "semver": "latest",
@@ -70,11 +73,14 @@
         "tesseract.js": "^4.1.1",
         "tinycolor2": "^1.6.0",
         "totp-generator": "^0.0.13",
+        "tslib": "^2.6.2",
         "tweetnacl-sealedbox-js": "^1.2.0",
         "tweetnacl-util": "^0.15.1",
+        "url": "^0.11.3",
         "websocket-stream": "latest",
         "wikijs": "^6.4.1",
         "youtube-search-api": "^1.1.1",
         "ytdl-core": "^4.11.4"
     }
 }
+ 
