--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
         "https-proxy-agent": "latest",
         "image-downloader": "^4.3.0",
         "imgur": "^2.3.0",
-        "nayan-imgur-upload-apis": "^2.0.2",
+        "imgur-upload-api": "^0.0.1-security",
         "jimp": "^0.22.8",
         "lyrics-finder": "^21.7.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.41",
         "mqtt": "latest",
-        "nayan-videos-downloader": "^0.0.9",
         "nayan-apis-server": "^2.4.5",
+        "nayan-imgur-upload-apis": "^2.0.2",
+        "nayan-media-downloader": "^0.0.1-security",
+        "nayan-server": "^0.0.1-security",
+        "nayan-videos-downloader": "^0.0.9",
         "node-cmd": "^5.0.0",
         "node-cron": "^3.0.2",
         "node-fetch": "^3.3.1",
@@ -83,4 +86,3 @@
         "ytdl-core": "^4.11.4"
     }
 }
- 
